[package]
name = "rusty-things"
version = "0.1.0"
authors = ["Felix Fichte <dev@spruce.de>"]
license = "MIT"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6"]



[dependencies]



diesel = { version = "1.4.0", features = ["sqlite"] }
diesel_migrations = "1.4.0"

neon-serde2 = {path = "/Users/spruce/Code/OSS/neon-serde", version = "0.10.0"}


serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"


dotenv = "0.9.0"

reqwest = "0.9.17"
# For migrating to new ids
bs58 = "0.3.1"
sha-1 = "0.9.1"