[package]
name = "node-rusty-things"
version = "0.1.0"
authors = ["Felix Fichte <dev@spruce.de>"]
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]
edition = "2018"

[lib]
name = "node_rusty_things"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.2.0"

[dependencies]
diesel = { version = "1.4.0", features = ["sqlite"] }
diesel_migrations = "1.4.0"

neon = "0.3.1"
neon-serde = "0.3.0"


serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"


dotenv = "0.9.0"

reqwest = "0.9.17"
# For migrating to new ids
bs58 = "0.3.1"
sha-1 = "0.9.1"